// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders correctly on empty 1`] = `
<div>
  <button
    aria-controls="popover-content-:r1:"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="chakra-button css-aay2ge"
    data-testid="dropdown-button"
    id="popover-trigger-:r1:"
    type="button"
  >
    <div
      class="css-1rr4qq7"
    >
      Select an item
       
      <span
        class="chakra-text css-10rvbm3"
      />
    </div>
    <svg
      class="chakra-icon css-c0air1"
      focusable="false"
      viewBox="0 0 8 4"
    >
      <path
        d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <div
    class="chakra-popover__popper css-0"
    style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
  >
    <section
      aria-describedby="popover-body-:r1:"
      class="chakra-popover__content css-faem7"
      data-testid="dropdown-body"
      id="popover-content-:r1:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-old1by"
        id="popover-body-:r1:"
      >
        <ul
          class="css-155za0w"
          role="list"
        />
      </div>
    </section>
  </div>
</div>
`;

exports[`Dropdown renders correctly on items 1`] = `
<div>
  <button
    aria-controls="popover-content-:r3:"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="chakra-button css-aay2ge"
    data-testid="dropdown-button"
    id="popover-trigger-:r3:"
    type="button"
  >
    <div
      class="css-1rr4qq7"
    >
      Select an item
       
      <span
        class="chakra-text css-10rvbm3"
      >
        Item 1
      </span>
    </div>
    <svg
      class="chakra-icon css-c0air1"
      focusable="false"
      viewBox="0 0 8 4"
    >
      <path
        d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <div
    class="chakra-popover__popper css-0"
    style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
  >
    <section
      aria-describedby="popover-body-:r3:"
      class="chakra-popover__content css-faem7"
      data-testid="dropdown-body"
      id="popover-content-:r3:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-old1by"
        id="popover-body-:r3:"
      >
        <ul
          class="css-155za0w"
          role="list"
        >
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 1
            </li>
          </div>
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 2
            </li>
          </div>
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 3
            </li>
          </div>
        </ul>
      </div>
    </section>
  </div>
</div>
`;

exports[`Dropdown renders correctly on items and mouse leave 1`] = `
<div>
  <button
    aria-controls="popover-content-:r7:"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="chakra-button css-aay2ge"
    data-testid="dropdown-button"
    id="popover-trigger-:r7:"
    type="button"
  >
    <div
      class="css-1rr4qq7"
    >
      Select an item
       
      <span
        class="chakra-text css-10rvbm3"
      >
        Item 1
      </span>
    </div>
    <svg
      class="chakra-icon css-c0air1"
      focusable="false"
      viewBox="0 0 8 4"
    >
      <path
        d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <div
    class="chakra-popover__popper css-0"
    style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
  >
    <section
      aria-describedby="popover-body-:r7:"
      class="chakra-popover__content css-faem7"
      data-testid="dropdown-body"
      id="popover-content-:r7:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-old1by"
        id="popover-body-:r7:"
      >
        <ul
          class="css-155za0w"
          role="list"
        >
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 1
            </li>
          </div>
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 2
            </li>
          </div>
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 3
            </li>
          </div>
        </ul>
      </div>
    </section>
  </div>
</div>
`;

exports[`Dropdown renders correctly on items and open click 1`] = `
<div>
  <button
    aria-controls="popover-content-:r5:"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="chakra-button css-aay2ge"
    data-testid="dropdown-button"
    id="popover-trigger-:r5:"
    type="button"
  >
    <div
      class="css-1rr4qq7"
    >
      Select an item
       
      <span
        class="chakra-text css-10rvbm3"
      >
        Item 1
      </span>
    </div>
    <svg
      class="chakra-icon css-c0air1"
      focusable="false"
      viewBox="0 0 8 4"
    >
      <path
        d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <div
    class="chakra-popover__popper css-0"
    data-popper-escaped=""
    data-popper-placement="bottom"
    data-popper-reference-hidden=""
    style="visibility: visible; position: absolute; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px); width: 0px; --popper-transform-origin: top center;"
  >
    <section
      aria-describedby="popover-body-:r5:"
      class="chakra-popover__content css-faem7"
      data-testid="dropdown-body"
      id="popover-content-:r5:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-old1by"
        id="popover-body-:r5:"
      >
        <ul
          class="css-155za0w"
          role="list"
        >
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 1
            </li>
          </div>
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 2
            </li>
          </div>
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 3
            </li>
          </div>
        </ul>
      </div>
    </section>
  </div>
</div>
`;

exports[`Dropdown renders correctly on items and open click on item click 1`] = `
<div>
  <button
    aria-controls="popover-content-:r9:"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="chakra-button css-aay2ge"
    data-testid="dropdown-button"
    id="popover-trigger-:r9:"
    type="button"
  >
    <div
      class="css-1rr4qq7"
    >
      Select an item
       
      <span
        class="chakra-text css-10rvbm3"
      >
        Item 1
      </span>
    </div>
    <svg
      class="chakra-icon css-c0air1"
      focusable="false"
      viewBox="0 0 8 4"
    >
      <path
        d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <div
    class="chakra-popover__popper css-0"
    data-popper-escaped=""
    data-popper-placement="bottom"
    data-popper-reference-hidden=""
    style="visibility: hidden; position: absolute; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px); width: 0px; --popper-transform-origin: top center;"
  >
    <section
      aria-describedby="popover-body-:r9:"
      class="chakra-popover__content css-faem7"
      data-testid="dropdown-body"
      id="popover-content-:r9:"
      role="dialog"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: visible; transform: scale(0.95) translateZ(0);"
      tabindex="-1"
    >
      <div
        class="chakra-popover__body css-old1by"
        id="popover-body-:r9:"
      >
        <ul
          class="css-155za0w"
          role="list"
        >
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 1
            </li>
          </div>
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 2
            </li>
          </div>
          <div
            class="css-ua49oa"
            data-testid="dropdown-item"
          >
            <li
              class="css-1gf73kr"
            >
              Item 3
            </li>
          </div>
        </ul>
      </div>
    </section>
  </div>
</div>
`;
